# Robotics

./: README.md
Project 1/: Faculty of Engineering.docx
Project 1/Robotics_Project/conveyor_demo-main/src/demo_world/: CMakeLists.txt  package.xml
Project 1/Robotics_Project/conveyor_demo-main/src/demo_world/launch/: demo.launch  rob.launch
Project 1/Robotics_Project/conveyor_demo-main/src/demo_world/msg/: CubePositions.msg
Project 1/Robotics_Project/conveyor_demo-main/src/demo_world/src/: cube_positions_publisher.py  cube_positions_subscriber.py  demo.py  demo_ghada.py
Project 1/Robotics_Project/conveyor_demo-main/src/demo_world/src/versions that I might need/: working demo.py
Project 1/Robotics_Project/conveyor_demo-main/src/demo_world/urdf/: bluebox.urdf  conveyor.urdf  greenbox.urdf  redbox.urdf
Project 1/Robotics_Project/movit_robot_arm_sim/: gazebo_zebo.launch
Project 1/Robotics_Project/movit_robot_arm_sim/config/: new_ros_controllers.yaml  ros_controllers.yaml
Project 1/Robotics_Project/movit_robot_arm_sim/launch/: full_robot_arm_sim (copy).launch  full_robot_arm_sim.launch  gazebo_before_edit.launch  try.launch
Project 1/Robotics_Project/movit_robot_arm_sim/models/: cam.sdf
Project 1/Robotics_Project/movit_robot_arm_sim/scripts/: motionplanner1.py
Project 1/Robotics_Project/movit_robot_arm_sim/src/: Classification.py  cam_subscriber.py  move_to_point.py
Project 2/: Readme
Project 2/master_slave_new/: CMakeLists.txt  package.xml
Project 2/master_slave_new/launch/: master_slave_new.launch
Project 2/master_slave_new/scripts/: final.py
(+2 files in other folders)
