<?xml version="1.0"?>
<package format="2">
  <name>demo_world</name>
  <version>0.0.0</version>
  <description>The demo_world package</description>

  <maintainer email="gurnarok@todo.todo">gurnarok</maintainer>

  <!-- License information goes here -->
  <license>TODO</license>

  <!-- Url tags are optional, you can add URLs here if needed -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/demo_world</url> -->

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information to be placed here -->
  </export>
</package>

